welcome.lessons.welcome.array.occurenceofvalue.OccurrenceOfValue.scala.error
occurrences:4: error: ')' expected but '.' found.
	for (i <- 0 tonums.length-1) 
                          ^occurrences:8: error: illegal start of simple expression
}
^